fixed white space on landing page

--- a/style.css
+++ b/style.css
@@ -19,6 +19,9 @@ p{
   padding: 10px 10px 10px 10px;
 }
 
+
+
+
 .page, :target ~ .default {
   display: none;
 }
@@ -168,7 +171,7 @@ p{
 }
 
 .header{
-  height: calc(100vh - 56px);
+  /* height: calc(100vh - 56px); */
   width: 100%;
   background-image: linear-gradient(
     to right bottom,
@@ -177,6 +180,7 @@ p{
     url(https://images.unsplash.com/photo-1458245201577-fc8a130b8829?ixlib=rb-0.3.5&s=5d00367…&auto=format&fit=crop&w=1355&q=80);
   background-size: cover;
   background-position: top;
+  height: 100vh;
 }
 .text-box{
   position: absolute;
